Bug 64536 - Macros: Is not working properly macro DIR$
Summary: Macros: Is not working properly macro DIR$
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
4.0.3.3 release
Hardware: Other Windows (All)
: high major
Assignee: Noel Power
URL:
Whiteboard: BSA target:4.1.0 target:4.0.4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-05-13 13:15 UTC by Vladimir
Modified: 2013-05-21 05:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vladimir 2013-05-13 13:15:02 UTC
Problem description: 
DIR$ macro does not work correctly with the mask files.
Steps to reproduce:
1. 
Sub Main
 a = DIR$("C:\Users\vvv\AppData\Local\Temp\*_dat.txt")
 MsgBox(a)
End Sub

2. The directory C:\Users\vvv\AppData\Local\Temp\ contains files
63988_13_05_2013_13_09_27.txt
63988_13_05_2013_13_09_27.xlt
63988_13_05_2013_13_09_27_dat.txt
FXSAPIDebugLogFile.txt

Current behavior:
63988_13_05_2013_13_09_27.txt
Expected behavior:
63988_13_05_2013_13_09_27_dat.txt
              
Operating System: Windows 7
Version: 4.0.3.3 release
Last worked in: 3.6.6.2 release
Comment 1 Julien Nabet 2013-05-18 05:51:09 UTC
On pc Debian x86-64 with master sources updated yesterday, I also have got a wrong result, it shows: "63988_13_05_2013_13_09_27.xlt"

Noel: one for you?
Comment 2 Julien Nabet 2013-05-18 05:51:37 UTC
Increase importance since it's a regression
Comment 3 Noel Power 2013-05-20 08:54:39 UTC
I can take it
Comment 4 Commit Notification 2013-05-20 11:23:13 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=175509176433cf5df2d98718e1a6f9cf5bbe9658

fix wildcard handling regression( for basic functions like Dir ) fdo#64536



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-05-20 18:51:59 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=715222bc431183028b2accb2afb5f21b42008d70&h=libreoffice-4-0

fix wildcard handling regression( for basic functions like Dir ) fdo#64536


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2013-05-20 18:57:13 UTC
I git updated master sources and tried again, it worked.
Thank you Noel for your very fast fix! :-)
I let you put it at RESOLVED/FIXED, perhaps you want to check something before doing it. I'll do the VERIFY part.
Comment 7 Julien Nabet 2013-05-20 19:28:20 UTC
As I had said in https://bugs.freedesktop.org/show_bug.cgi?id=64536#c6 => VERIFIED
Comment 8 Vladimir 2013-05-21 05:21:50 UTC
This works. Thank you Noel.