fix wildcard handling regression( for basic functions like Dir ) fdo#64536

Tweak another fallout from String->OUString

Change-Id: I3932bdb441fe6b08cefa6331870956664ade77bd